--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,16 @@ python:
 - 3.3
 - 3.4
 - 3.5
+before_install:
+ - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
+ - chmod +x miniconda.sh
+ - bash miniconda.sh -b -p $HOME/miniconda
+ - export PATH=/home/travis/miniconda/bin:$PATH
+ - conda update --yes conda
 install:
+- conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+- source activate test
+- conda install --yes numpy=$NUMPY scipy=$SCIPY matplotlib pip
 - pip install coveralls
 script:
 - nosetests --with-coverage
