--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,21 @@ python:
 - 3.3
 - 3.4
 - 3.5
-before_install:
- - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
- - chmod +x miniconda.sh
- - bash miniconda.sh -b -p $HOME/miniconda
- - export PATH=/home/travis/miniconda/bin:$PATH
- - conda update --yes conda
 install:
-- conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
-- source activate test
-- conda install --yes numpy=$NUMPY scipy=$SCIPY matplotlib pip
-- pip install coveralls
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy matplotlib nose
+  - source activate test-environment
 script:
 - nosetests --with-coverage
 after_success:
